PEC-2: Fix fig caption alignment on mobile and tablet

--- a/src/assets/styles/layouts/_media.scss
+++ b/src/assets/styles/layouts/_media.scss
@@ -98,6 +98,12 @@
     &__intro {
       padding: 0;
     }
+
+    &_media-post__figure {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   footer:has(a[href^="mailto:"]) {
